[package]
name = "shiplog-cache"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite cache with TTL and key helpers for shiplog GitHub API calls."
readme = "README.md"
documentation = "https://docs.rs/shiplog-cache"
repository.workspace = true
homepage.workspace = true
keywords = ["cache", "sqlite", "ttl", "github", "api"]
categories = ["caching", "development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
shiplog-cache-key = { path = "../shiplog-cache-key", version = "0.2.1" }
shiplog-cache-stats = { path = "../shiplog-cache-stats", version = "0.2.1" }
shiplog-cache-expiry = { path = "../shiplog-cache-expiry", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }

[dependencies.rusqlite]
version = "0.38.0"
features = ["bundled", "chrono", "serde_json"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
shiplog-testkit = { path = "../shiplog-testkit", version = "0.2.1" }


