[package]
name = "shiplog-channel"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Channel utilities for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-channel"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "channel", "concurrency", "async", "synchronization"]
categories = ["concurrency", "asynchronous"]

[dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "sync"] }
anyhow.workspace = true

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
